# MRE

./: .gitignore  CMakeLists.txt  README.md
data/: ratings.json  test.json  user.json
frontend/: server.js
frontend/public/: index.html
frontend/public/css/: chunk-vendors.0a96196b.css
frontend/public/js/: app.37f07e40.js  app.37f07e40.js.map  chunk-vendors.aa4e9b13.js  chunk-vendors.aa4e9b13.js.map
src/: App.cpp  AppComponent.hpp
src/algorithm/: recomend.cpp  recomend.hpp  recomendation_general.cpp  similarity.cpp  similarity.hpp  test.cpp  test.hpp
src/controller/: MyController.cpp  MyController.hpp
src/db/: jsonDb.hpp  userDb.cpp  userDb.hpp
src/dto/: DTOs.hpp
utility/: build.sh
